# djinntoux

./: .gitignore  README.md  READMORE.md  pyproject.toml
djinntoux/: context_processors.py  middleware.py  renames.py  scraping.py  settings2.py  settings_reuse.py  urls2.py  urls_reuse.py
djinntoux/abstract/: ab_mod.py
djinntoux/dapp_ttags/: apps.py
djinntoux/dapp_users/: admin.py  apps.py  models.py
djinntoux/dapp_users/migrations/: 0001_initial.py
djinntoux/dproj/: context_reuse.py  middleware.py  rename.py  settings_reuse.py  urls_reuse.py
djinntoux/users/: apps.py  models.py
