[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djinntoux"
version = "0.0.8"
description = "Generic reusable bits for Django projects"
readme = "README.md"
requires-python = ">= 3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",       # for scraping
    "requests>=2.32.3",             # for scraping, also installs urllib3
    "uuid6>=2024.7.10",             # for abstract models

    "django>=5.2a1",                # standard dep
    "django-environ>=0.12.0",       # standard dep
    "django-htmlmin>=0.11.0",       # standard dep
    "django-tree-queries>=0.19.0",  # standard dep
    "djangoql>=0.18.1",             # standard dep
    "gunicorn>=23.0.0",             # standard dep
    "psycopg>=3.2.4",               # standard dep

    # these packages do not need djinntoux as a dep, as they are included here
    "vto-time>=0.0.7",              # standard dep
    "vto-users>=0.0.2",             # standard dep
    "vto-frontend>=0.0.3",          # standard dep

    "pip-autoremove>=0.10.0",       # extra
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Repository = "https://github.com/venteto/djinntoux"